# dev-template-generator

./: Cargo.toml  README.md  flake.nix
dev-template-generator/src/: embedded_templates.rs  main.rs  merger.rs
dev-template-generator/tests/: integration_tests.rs
dev-template-generator/tests/integration/: combination_tests.rs  common.rs  comprehensive_tests.rs  coverage_tests.rs  mod.rs  single_template_tests.rs
generator/: Cargo.toml
generator/src/: main.rs  template.rs
generator/tests/integration/: cli_tests.rs  common.rs  error_tests.rs  multi_template_tests.rs  stress_tests.rs
nix-parser/: Cargo.toml
nix-parser/src/: ast.rs  flake_analysis.rs  lib.rs  parser.rs
nix-parser/src/templates/: bun.toml  clojure.nix  csharp.nix  csharp.toml  cue.toml  elixir.nix  elm.nix  go.nix  go.toml  java.nix  kotlin.nix  kotlin.toml  nickel.toml  opa.toml  php.toml  pulumi.nix  pulumi.toml  python.nix  r.toml  ruby.toml  rust-toolchain.toml  rust.toml  scala.nix  scala.toml  shell.toml  swift.toml
nix-parser/src/templates/test-debug-elm/: flake.nix
src/: embedded_templates.rs  main.rs  merger.rs  template.rs
src/templates/: c-cpp.toml  clojure.toml  dhall.toml  elixir.toml  elm.toml  gleam.toml  hashi.toml  haskell.toml  haxe.toml  java.nix  java.toml  latex.toml  nim.toml  nix.nix  nix.toml  node.toml  ocaml.nix  ocaml.toml  protobuf.toml  python.toml  vlang.toml  zig.toml
tests/: integration_tests.rs
