[package]
name = "dev-template-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
once_cell = "1.21"
rust-embed = "8.7"
nix-parser = { path = "../nix-parser" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"