[package]
name = "nix-parser"
version = "0.1.0"
edition = "2021"
description = "A Nix language parser using nom"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stephenstubbs/nix-parser"
keywords = ["nix", "parser", "flake"]
categories = ["parsing"]

[dependencies]
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"